2013-07-25  Anders Carlsson  <andersca@apple.com>

        Remove lastModifiedDate from ResourceResponse
        https://bugs.webkit.org/show_bug.cgi?id=119092

        Reviewed by Andreas Kling.

        Computing m_lastResponseDate is costly on some platforms and we already have a better way to
        get the last response time, so convert the two call sites that used to call ResourceresponseBase::lastModifiedDate()
        over to using lastModified() instead.

        * platform/network/ResourceResponseBase.cpp:
        (WebCore::ResourceResponseBase::ResourceResponseBase):
        (WebCore::ResourceResponseBase::adopt):
        (WebCore::ResourceResponseBase::copyData):
        * platform/network/ResourceResponseBase.h:
        * platform/network/cf/ResourceResponseCFNet.cpp:
        (WebCore::ResourceResponse::platformLazyInit):
        * plugins/PluginStream.cpp:
        (WebCore::lastModifiedDate):
        (WebCore::PluginStream::startStream):

2013-07-25  Yi Shen  <max.hong.shen@gmail.com>

        Optimize the thread locks for API Shims
        https://bugs.webkit.org/show_bug.cgi?id=118573

        Reviewed by Geoffrey Garen.

        Remove the thread lock from API Shims if the VM has an exclusive thread (e.g. the VM 
        only used by WebCore's main thread).

        No new tests required since no functionality changed.

        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::JSDOMWindowBase::commonVM):

2013-07-25  Bear Travis  <betravis@adobe.com>

        [CSS Shapes] Shape methods and member variables should be guarded with the CSS_SHAPES flag
        https://bugs.webkit.org/show_bug.cgi?id=117277

        Reviewed by Alexandru Chiculita.

        This patch adds some compile guards that were missing from the RenderStyle and
        StyleRareNonInheritedData files. When the compile guard caused parameters to
        not be used, the parameters were marked using UNUSED_PARAM.
